# webxr-bob-exp

./: .gitignore  LICENSE  README.md  app.js  sierpinski.js  two.html
godot-webxr-skeleton/: bob webxr.apple-touch-icon.png.import  bob webxr.icon.png.import  bob webxr.png.import  export_presets.cfg  icon.svg.import  main.gd  main.tscn  project.godot
rust/sierpinski/: Cargo.toml  README.md
rust/sierpinski/src/: lib.rs
rust/triangle/: Cargo.toml  README.md
rust/triangle/src/: flat.frag  flat.vert  gl_thin.rs  lib.rs  objects.rs  shaders.rs  test.rs  texture.frag  texture.vert
webroot/: app.js  index.html  rust-pkg  sierpinski.html  sierpinski.js  three.html  triangle.html  wasm-triangle
