[package]
name = "triangle"
version = "0.1.0"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
futures = "0.3.4"
js-sys = "*"
wasm-bindgen = "0.2.84"
#wasm-bindgen = "*"
wasm-bindgen-futures = "*"
console_error_panic_hook = { version = "*", optional = true }

[dependencies.web-sys]
version = "*"
features = [
    'Document',
    'Element',
    'Gpu',
    'Headers',
    'HtmlCanvasElement',
    'Navigator',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Text',
    'WebGl2RenderingContext',
    'WebGlFramebuffer',
    'Window',
    'XrBoundedReferenceSpace',
    'XrEye',
    'XrFrame',
    'XrHandedness',
    'XrInputSource',
    'XrInputSourceArray',
    'XrInputSourceEvent',
    'XrInputSourceEventInit',
    'XrInputSourcesChangeEvent',
    'XrJointPose',
    'XrJointSpace',
    'XrPose',
    'XrReferenceSpace',
    'XrReferenceSpaceEvent',
    'XrReferenceSpaceEventInit',
    'XrReferenceSpaceType',
    'XrRenderState',
    'XrRenderStateInit',
    'XrRigidTransform',
    'XrSession',
    'XrSessionEvent',
    'XrSessionEventInit',
    'XrSessionInit',
    'XrSessionMode',
    'XrSpace',
    'XrTargetRayMode',
    'XrView',
    'XrViewerPose',
    'XrViewport',
    'XrVisibilityState',
    'XrWebGlLayer',
    'XrWebGlLayerInit',
    'XrSystem',
    'console',
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(web_sys_unstable_apis)'] }

[lints.clippy]
large_enum_variant = "allow"
new_without_default = "allow"
overly_complex_bool_expr = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
